@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>currentDocument</key>
+	<string>doc/ChangeLog.txt</string>
 	<key>documents</key>
 	<array>
 		<dict>
@@ -26,7 +28,7 @@
 			<key>filename</key>
 			<string>Info.plist</string>
 			<key>lastUsed</key>
-			<date>2007-06-14T18:23:36Z</date>
+			<date>2007-06-15T07:43:14Z</date>
 		</dict>
 		<dict>
 			<key>name</key>
@@ -50,10 +52,29 @@
 	<key>fileHierarchyDrawerWidth</key>
 	<integer>257</integer>
 	<key>metaData</key>
-	<dict/>
+	<dict>
+		<key>doc/ChangeLog.txt</key>
+		<dict>
+			<key>caret</key>
+			<dict>
+				<key>column</key>
+				<integer>0</integer>
+				<key>line</key>
+				<integer>2</integer>
+			</dict>
+			<key>firstVisibleColumn</key>
+			<integer>0</integer>
+			<key>firstVisibleLine</key>
+			<integer>0</integer>
+		</dict>
+	</dict>
+	<key>openDocuments</key>
+	<array>
+		<string>doc/ChangeLog.txt</string>
+	</array>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{577, 74}, {1124, 1094}}</string>
+	<string>{{543, 62}, {1010, 961}}</string>
 </dict>
 </plist>
